[FIX]: fixed container padding on mobile

--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -17,7 +17,7 @@
 
     @media (max-width: 768px) {
       padding: 240px 44px 36px;
-      margin: 0 -16px 0 -16px;
+      margin: 0 -44px 0 -44px;
       border-radius: 0;
     }
 
