--- a/src/styles/components/choose_package.css
+++ b/src/styles/components/choose_package.css
@@ -39,8 +39,8 @@
       }
 
       @media (max-width: 768px) {
-        margin: 0 -16px 0 -16px;
-        padding: 0 16px 0 16px;
+        margin: 0 -44px 0 -44px;
+        padding: 0 44px 0 44px;
         grid-template-columns: unset;
         display: flex;
         gap: 16px;
