--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -18,9 +18,9 @@ header {
     padding: 0 44px;
   }
 
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     padding: 0 16px;
-  }
+  } */
 
   .header_content {
     display: flex;
