--- a/src/styles/components/helper.css
+++ b/src/styles/components/helper.css
@@ -25,7 +25,7 @@
     padding: 0 44px;
   }
 
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     padding: 0 16px;
-  }
+  } */
 }
